objects/MDPERSONATOR__MD_suiteSetting__c.object
<CustomObject>
    <description>An object that stores application settings.</description>
    <fields>
        <fullName>MDPERSONATOR__GlobalCorrectFirstName__c</fullName>
        <defaultValue>&quot;OFF&quot;</defaultValue>
        <label>GlobalCorrectFirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GlobalGenderAggression__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>GlobalGenderAggression</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GlobalGenderPopulation__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>GlobalGenderPopulation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GlobalMiddleNameLogic__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <label>GlobalMiddleNameLogic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__GlobalNameHint__c</fullName>
        <defaultValue>&quot;4&quot;</defaultValue>
        <label>GlobalNameHint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PersApplyFilters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Personator Apply Filters</description>
        <label>PersApplyFilters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__aac__c</fullName>
        <defaultValue>false</defaultValue>
        <label>aac</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__append__c</fullName>
        <defaultValue>&quot;Blank&quot;</defaultValue>
        <label>append</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__centricHint__c</fullName>
        <defaultValue>&quot;Auto&quot;</defaultValue>
        <label>centricHint</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__countryOfOrigin__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>countryOfOrigin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__customerId__c</fullName>
        <defaultValue>&quot;get_your_license_string-&gt;&quot;</defaultValue>
        <label>customerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__dominantBusiness__c</fullName>
        <defaultValue>&quot;yes&quot;</defaultValue>
        <label>dominantBusiness</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__eeCountry__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>eeCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__eeMinLookup__c</fullName>
        <defaultValue>3</defaultValue>
        <label>eeMinLookup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__eeToggleCase__c</fullName>
        <defaultValue>&quot;MIXED&quot;</defaultValue>
        <label>eeToggleCase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__enterprise__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>enterprise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__geVerifyMode__c</fullName>
        <defaultValue>&quot;EXPRESS&quot;</defaultValue>
        <label>geVerifyMode</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__geoLevel__c</fullName>
        <defaultValue>&quot;off&quot;</defaultValue>
        <label>geoLevel</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__geocode__c</fullName>
        <defaultValue>&quot;GEOON&quot;</defaultValue>
        <label>geocode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalEmailUpdateCodes__c</fullName>
        <defaultValue>&quot;ES2[012]&quot;</defaultValue>
        <label>globalEmailUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalNameUpdateCodes__c</fullName>
        <defaultValue>&quot;NS01&quot;</defaultValue>
        <label>globalNameUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalPhoneCallerID__c</fullName>
        <defaultValue>&quot;False&quot;</defaultValue>
        <label>globalPhoneCallerID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalPhoneMode__c</fullName>
        <defaultValue>&quot;Express&quot;</defaultValue>
        <label>globalPhoneMode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalPhoneUpdateCodes__c</fullName>
        <defaultValue>&quot;PS0[12]&quot;</defaultValue>
        <label>globalPhoneUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__globalVerifyLevel__c</fullName>
        <defaultValue>&quot;AV2[45]&quot;</defaultValue>
        <label>globalVerifyLevel</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__gpVerifyMode__c</fullName>
        <defaultValue>&quot;Express&quot;</defaultValue>
        <label>gpVerifyMode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpAddressDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpAddressDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpCensus2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpCensus2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpCensus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpCensus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpDemographics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpDemographics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpGeocode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpGeocode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpIPAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpIPAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpNameDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpNameDetails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__grpParsedPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>grpParsedPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isAppendAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAppendAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isCheckAction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isCheckAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isMoveAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMoveAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__isVerifyAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVerifyAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__longAddressFormat__c</fullName>
        <defaultValue>&quot;off&quot;</defaultValue>
        <label>longAddressFormat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__opt__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>opt</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__outputScript__c</fullName>
        <defaultValue>&quot;NOCHANGE&quot;</defaultValue>
        <label>outputScript</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__persAddressUpdateCodes__c</fullName>
        <defaultValue>&quot;AS0[123]&quot;</defaultValue>
        <label>persAddressUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__persEmailUpdateCodes__c</fullName>
        <defaultValue>&quot;ES01&quot;</defaultValue>
        <label>persEmailUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__persNameUpdateCodes__c</fullName>
        <defaultValue>&quot;NS01&quot;</defaultValue>
        <label>persNameUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__persPhoneUpdateCodes__c</fullName>
        <defaultValue>&quot;PS0[12]&quot;</defaultValue>
        <label>persPhoneUpdateCodes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__usePreferredCity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>usePreferredCity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__zipFormat__c</fullName>
        <defaultValue>9</defaultValue>
        <label>Zip Code Format</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MD_suiteSetting</label>
    <nameField>
        <label>MD_suiteSetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_suiteSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>